Add a is_connected Api method to EmuClient
-- Add is_connected method to EmuClient
-- Add the method to the Emu proxy as syntactic sugar

Signed-off-by: Bes Dollma <bdollma@cisco.com>

--- a/doc/trex_stateless.asciidoc
+++ b/doc/trex_stateless.asciidoc
@@ -6190,6 +6190,8 @@ if not master_daemon.is_stl_rpc_proxy_running():
 ===== Emu Methods:
 
 * connect
+* is_connected
+* disconnect
 * load_profile
 * remove_profile
 * add_ns
