--- a/doc/trex_astf.asciidoc
+++ b/doc/trex_astf.asciidoc
@@ -219,10 +219,17 @@ In case of UDP it is a message base protocols like send_msg/wait_for_msg etc.
 
 ==== GPRS Tunnelling Protocol (GTP) 
 
-* Supports Encapsulation(adding GTP header)/Decapsulation(removing GTP header) of GTP traffic
-* Port which is GTP enabled will perform Encapsulation/Decapsulation functionality (client side)
-* TRex server should be started with option --gtpu <port number> (should be zero)
-* Limitation: Can use only 2 ports and only port 0 (client side) can be configured as GTPU tunnel
+===== What is GTP ?
+
+GPRS Tunneling protocol is an IP/UDP based protocol used in GSM, UMTS and LTE networks, and can be decomposed into separate protocols, GTP-C, GTP-U and GTP'. +
+
+===== What does TRex support ?
+* Currently TRex supports only GTP-U protocol. +
+* In GTP-U mode TRex knows to encapsulates/decapsulates GTP-U traffic. +
+The client side of TRex server is responsible to the encapsulation/decapsulation functionality.
+* Loopback mode - from version v2.93 TRex supports loopback mode for testing without DUT - the server side is aware to the GTPU mode and decapsulates the client packets, and learns the tunnel context. When transmitting, the server encapsulates the packets with the same tunnel context. +
+* More than 2 ports support - from version v2.93 TRex supports more than 2 ports in GTPU mode.
+
 
 
 === ASTF package folders 
@@ -305,7 +312,7 @@ sudo ./t-rex-64 -i --astf
 [source,bash]
 -------------------
 ./trex-console -s [server-ip]
------------------
+-------------------
 
 
 .From Console
@@ -315,7 +322,7 @@ trex>start -f astf/http_simple.py -m 1000 -d 1000 -l 1000
 trex>tui
 trex>[press] t/l for astf statistics and latency 
 trex>stop
-------------------
+-------------------
 
 .Cosole ASTF stats 
 [source,bash]
@@ -900,7 +907,7 @@ sudo ./t-rex-64 -i --astf
         print('\n\n*** test had warnings ****\n\n')
         for w in c.get_warnings():
              print(w)
------
+----
 <1> Connect 
 <2> Start the traffic 
 <3> Wait for the test to finish
@@ -2098,11 +2105,117 @@ ASTFAssociationRule(port=80, ip_start="48.0.0.0", ip_end="48.0.0.255",
                     l7_map=[0,1,2,3])                                   # for template 2
 ----
 
-==== Tutorial: Run TRex in GTP mode with simple HTTP profile   
+<<<
 
-*Goal*:: 
+==== GTPU tutorials
 
-Send HTTP flows with GTP tunnel added and remove GTP tunnel when traffic comes back to trex client
+Please make yourself familiar with the link:trex_astf.html#_gprs_tunnelling_protocol_gtp[GTPU] protocol before proceeding.
+
+===== Tutorial: GTPU Activation/Deactivation API
+
+*Goal*:: Activating And Deactivating GTPU mode.
+
+The activation of the GTPU mode was changed in version v2.93, so in this tutorial we will see how we can activate GTPU mode
+in both cases, and how to deactivate it in versions v2.93 and above.
+
+Before v2.93 GTPU mode can be activated using the --gtpu flag:
+[source,bash]
+-------------------
+sudo ./t-rex-64 -i --astf --software --tso-disable --gtpu 0
+-------------------
+
+
+From version v2.93 GTPU mode is being activated/deactivated via RPC command. +
+Now we will see how to activate/deactivate GTPU mode using TRex console and ASTF automation API.
+
+.start TRex server with the following flags
+[source,bash]
+-------------------
+sudo ./t-rex-64 -i --astf --software --tso-disable
+-------------------
+
+.TRex console
+
+* Activating GTPU mode:
+
+[source,bash]
+-------------------
+trex> tunnel --type gtpu
+-------------------
+
+* Deactivating GTPU mode:
+
+[source,bash]
+-------------------
+trex> tunnel --type gtpu --off
+-------------------
+
+.ASTF automation API
+
+[source,python]
+----
+client = ASTFClient("127.0.0.1")
+client.connect()
+# gtpu type is 1
+client.activate_tunnel(tunnel_type=1, activate=True)  <1>
+...
+...
+client.activate_tunnel(tunnel_type=1, activate=False) <2>
+----
+<1> Activating GTPU mode
+<2> Deactivating GTPU mode
+
+See: link:https://github.com/cisco-system-traffic-generator/trex-core/blob/master/scripts/automation/trex_control_plane/interactive/trex/astf/trex_astf_client.py#L36[tunnel_type]
+
+
+===== Tutorial: GTPU Loopback mode
+
+*Goal*:: Activating/Deactivating GTPU Loopback mode using TRex console and ASTF automation API
+
+.start TRex server with the following flags
+[source,bash]
+-------------------
+sudo ./t-rex-64 -i --astf --software --tso-disable
+-------------------
+
+.TRex console
+
+* Activating GTPU Loopback mode:
+
+[source,bash]
+-------------------
+trex> tunnel --type gtpu --loopback
+-------------------
+
+* Deactivating GTPU Loopback mode:
+
+[source,bash]
+-------------------
+trex> tunnel --type gtpu --off
+-------------------
+
+.ASTF automation API
+
+[source,python]
+----
+client = ASTFClient("127.0.0.1")
+client.connect()
+# gtpu type is 1
+client.activate_tunnel(tunnel_type=1, activate=True, loopback=True)  <1>
+...
+...
+client.activate_tunnel(tunnel_type=1, activate=False)                <2>
+----
+<1> Activating GTPU mode with loopback mode
+<2> Deactivating GTPU mode
+
+See: link:https://github.com/cisco-system-traffic-generator/trex-core/blob/master/scripts/automation/trex_control_plane/interactive/trex/astf/trex_astf_client.py#L36[tunnel_type]
+
+
+===== GTPU traffic tutorials
+*Tutorial: Generating GTPU traffic* +
+
+*Goal*:: Generating GTPU traffic with IPv4/IPv6 header using TRex console and ASTF automation API
 
 *Traffic profile*::  
 
@@ -2115,54 +2228,392 @@ link:{github_astf_path}/http_simple.py[astf/http_simple.py]
 [source,python]
 ----
 from trex.astf.api import *
-
+import argparse
 
 class Prof1():
-    def get_profile(self):
+    def __init__(self):
+        pass
+
+    def get_profile(self, tunables, **kwargs):
+        parser = argparse.ArgumentParser(description='Argparser for {}'.format(os.path.basename(__file__)), 
+                                         formatter_class=argparse.ArgumentDefaultsHelpFormatter)
+        args = parser.parse_args(tunables)
+
         # ip generator
-        ip_gen_c = ASTFIPGenDist(ip_range=["16.0.0.0", "16.0.0.255"], 
-                                 distribution="seq")
-        ip_gen_s = ASTFIPGenDist(ip_range=["48.0.0.0", "48.0.255.255"], 
-                                  distribution="seq")
-        ip_gen = ASTFIPGen(glob=ASTFIPGenGlobal(ip_offset="1.0.0.0"),      <1>
+        ip_gen_c = ASTFIPGenDist(ip_range=["16.0.0.0", "16.0.0.255"], distribution="seq")
+        ip_gen_s = ASTFIPGenDist(ip_range=["48.0.0.0", "48.0.255.255"], distribution="seq")
+        ip_gen = ASTFIPGen(glob=ASTFIPGenGlobal(ip_offset="1.0.0.0"),
                            dist_client=ip_gen_c,
                            dist_server=ip_gen_s)
 
         return ASTFProfile(default_ip_gen=ip_gen,
-                            cap_list=[ASTFCapInfo(
-                                      file="../avl/delay_10_http_browsing_0.pcap"
-                                      cps=1)
-                                     ])                                    <2>
-
+                            cap_list=[ASTFCapInfo(file="../avl/delay_10_http_browsing_0.pcap",
+                            cps=2.776)])
 
 def register():
     return Prof1()
-
 ----
 
-<1> Define the tuple generator range for client side and server side
-<2> The template list with relative CPS (connection per second) 
+After we enabled the GTPU mode and started traffic with some profile.
+We need to update the GTPU context for each client. +
+Each client tunnel record consist of:
+
+* Source ip of the outer IP header
+* Destination ip of the outer IP header
+* Source port of outer UDP header - from version v2.93
+* TEID of GTPU header - field used to multiplex different connections in the same GTP tunnel.
+* IP version of the outer IP header +
+
+Every valid IP address can be used for the tunnel source and destination IP.
+
+Now we will see two identical examples of how to use the *update_tunnel_client_record* API, with IPv4 outer header and with IPv6 outer header. +
+In the first example we will use the TRex console and in the second one will use the ASTF automation API. +
+
+In these examples: 
+
+* We will show how to update the tunnel context of the clients in the range 16.0.0.0 - 16.0.0.255:
+* The teid will be incremented by 1 for each client in the range. The first one will receive teid 0 and second tied 1 and so on.
+* The source port and the IP address will be the same for all of the clients in the range.
+* The IPv6 outer header will be set by using src and dst addresses in IPv6 format. And by using the flag --ipv6 in TRex console or by changing the ip_version variable to 6 in ASTF python automation. +
 
 
-.Start Trex Server in GTPU mode 
+.TRex console
+
+
+*Updating the clients GTPU tunnel with IPv4 outer header:*
 [source,bash]
 -------------------
-sudo ./t-rex-64 -i --astf --gtpu 0
+trex> update_tunnel --c_start 16.0.0.0 --c_end 16.0.0.255 --teid 0 --src_ip 1.1.1.1 --dst_ip 11.0.0.1 --sport 5000 --type gtpu
 -------------------
 
-.Start trex client with following logic
-* Connect to Trex server
-* Load profile
-* Update GTP header information for a client using API <update_tunnel_client_record> 
-** Source ip of the tunnel
-** Destination ip of the tunnel
-** IP version of the tunnel
-** TEID (Tunnel endpoint identifier)
-* Example is at: scripts/automation/trex_control_plane/interactive/trex/examples/astf/tunnel_test.py
+*For IPv6 outer header:* +
+
+* Change the source IP and the destination IP to IPv6 adresses
+* Add the flag --ipv6
+
+<<<
+
+*Capturing of the traffic after the update command with IPv4:* +
+
+Here we can see that indeed GTPU header was added. +
+(Wireshark shows us the inner IP addresses)
+
+image::images/gtpu.png[title="GTPU packets",align="center",width={p_width}, link="images/gtpu.png"]
+
+And here is an example of the outer packet from Wireshark. +
+
+image::images/gtpu_full.png[title="GTPU header",align="center",width={p_width}, link="images/gtpu_full.png"]
+
+We can see that the outer IP addresses and the outer source port are the one we set using the *update_tunnel_client_record* API +
+
+<<<
+
+* In these two images we can see that the teid is incrementing between the clients.
+
+image::images/gtpu_teid1.png[title="teid - 84",align="center",width={p_width}, link="images/gtpu_teid1.png"]
+
+
+image::images/gtpu_teid2.png[title="teid - 85",align="center",width={p_width}, link="images/gtpu_teid2.png"]
+
+<<<
+
+
+
+.ASTF python automation API
+
+*Updating the clients GTPU tunnel with IPv4 outer header:*
+[source,python]
+----
+ip_prefix = "16.0.0."
+sip = "1.1.1.1"                      <1>
+dip = "11.0.0.1"                     <2>
+sport = 5000
+teid = 0
+client_db = dict()
+ip_version = 4                       <3>
+#gtpu type is 1
+tunnel_type = 1
+num_of_client = 256
+
+while teid < num_of_client:
+    c_ip = ip_prefix + str(teid)
+    c_ip = ip_to_uint32(c_ip)
+    client_db[c_ip] = Tunnel(sip, dip, sport, teid, ip_version)
+    teid += 1
+
+astf_client.update_tunnel_client_record(client_db, tunnel_type)  
+----
+
+As you can see we are looping over the clients: 16.0.0.0 - 16.0.0.255
+and for each client we are building the same record we used in the console example.
+
+*For IPv6 outer header:* +
+
+<1> Change the source IP to IPv6 address
+<2> Change the destination IP to IPv6 address
+<3> Change the version to 6
+
+
+
+<<<
+
+
+*Tutorial: Generating GTPU traffic on more than 2 ports* +
+
+*Goal*:: Generating GTPU traffic with IPv4 header on more than 2 ports, using ASTF automation API
+
+*File*::
+link:{github_astf_path}/http_simple.py[astf/http_simple.py]
+
+From v2.93 TRex supports GTPU mode on more than 2 ports. +
+But some modifications are needed, because TRex gives different offset to each dual port.
+
+see: link:https://github.com/cisco-system-traffic-generator/trex-core/blob/4d30bf3af8c133bd96663212a637a2a43bcf6098/scripts/automation/trex_control_plane/interactive/trex/astf/trex_astf_profile.py#L1089[ASTFIPGen], 
+link:https://github.com/cisco-system-traffic-generator/trex-core/blob/master/scripts/automation/trex_control_plane/interactive/trex/astf/trex_astf_profile.py#L1047[ASTFIPGenGlobal]. +
+
+As you can see in http_simple example, we are using ASTFIPGen object when we are creating profiles.
+The ASTFIPGen class gets the offset as a parameter in the constructor, and the default value is "1.0.0.0". + 
+Each dual port has it's own offset, and this offset is used to route the packets to their right port.
+
+So when we are using *update_tunnel_client_record* API, we need to use the real clients IP that TRex server knows.
+
+*For example:* If we are using setup with 2 dual port with clients ip range: 16.0.0.0 - 16.0.0.255, and the offset is "1.0.0.0" +
+The clients in the first dual port will receive offset of 0, meaning ip prefix of "16.0.0." +
+And the clients in the second dual port will receive offset of '1.0.0.0', meaning ip prefix of "17.0.0."
+So when we are using this API we need to use clients ip with "17.0.0." and "16.0.0." prefixes. +
+
+*Capturing of the traffic on setups with 2 dual ports and client range of 16.0.0.0 - 16.0.0.255* +
+
+image::images/http_simple_ip_offset.png[title="IP offset with more than 1 dual port",align="center",width={p_width}, link="images/http_simple_ip_offset.png"]
+
+As you can see in this image there are clients with IP prefixes of "17.0.0." and "16.0.0." +
+The clients with the prefix "16.0.0." are with offset 0 and belong to the first dual port,
+and the clients with the prefix "17.0.0." are with offset "1.0.0.0" and belong to the second dual port.
+
+<<<
+
+*Example - Using the update_tunnel_client_record API with more than 2 ports*
+[source,python]
+----
+ip_prefix = "11.11.0."
+sip = "11.11.0.1"
+dip = "1.1.1.11"
+sport = 5000
+teid = 1
+client_db = dict()
+ip_version = 4
+#gtpu type is 1
+tunnel_type = 1
+num_of_client = 10
+ip_offset = 0
+# loop for each dual port (for each offset)
+loop = int(len(self.client.get_all_ports()) / 2)                            <1>
+
+for _ in range(loop):                                                       <2>
+    while teid <= num_of_client:
+        c_ip = ip_prefix + str(teid)
+        c_ip = ip_to_uint32(c_ip) + ip_offset                               <3>
+        client_db[c_ip] = Tunnel(sip, dip, sport, teid, ip_version)
+        teid += 1
+    ip_offset += ip_to_uint32("1.0.0.0")                                    <4>
+
+astf_client.update_tunnel_client_record(client_db, tunnel_type)  
+----
+<1> The number of dual ports
+<2> Iterating over the number of dual port
+<3> Adding to the client_ip the offset of the dual port
+<4> Updating the IP offset to the offset of the next dual port
+
+[NOTE] 
+=====================================================================
+The records will hold clients IP that doesn't necessarily exist in TRex server, but the server will ignore these records.
+=====================================================================
+
+*Tutorial: Bad distribution with GTPU traffic* +
+
+In order to get a good distribution, several tunnels must be used. Otherwise the outer 5 tuple will be the same for all the clients, hence all the incoming packets will be distributed to the same core. Then, all the packets are redirected from this one core to the relevant cores (using software RSS). This makes the one core a bottleneck, with very high cpu utilization in comparison to other cores.
+For more details about software RSS see: link:https://trex-tgn.cisco.com/trex/doc/trex_astf.html#_software_mode_with_multicore[software RSS.] +
+
+In version v2.92 and below every client had a tunnel of his own - because the tunnel src port was taken from the inner l4, which lead to good distribution between the cores. +
+The reasons we added source port to the *update_tunnel_client_record* API were: +
+
+* Flexibility - the user can control the fields of the tunnel. 
+* GTPU mode runs on software RSS - so HW RSS is not supported in GTPU mode, and in software redistribution the hack of using the the client source port is not needed.
+
+
+Let's now see an example of how we can see if we have bad distribution, with TRex console, when we are generating GTPU traffic.
+
+*Goal*:: Recognizing a bad distribution between the cores in GTPU mode using TRex console.
+
+.TRex console
+
+
+* Connect with TRex console.
+[source,bash]
+-------------------
+>./trex-console
+-------------------
+
+* Open TUI window
+[source,bash]
+-------------------
+trex>tui
+-------------------
+
+* In TUI window press Esc button
+* Press *u* key
+
+*Example of high cpu utilization from TUI window in TRex console:* +
+
+image::images/cpu_util.png[title="Bad distribution",align="center",width={p_width}, link="images/cpu_util.png"]
+
+As you can see in the image, the cpu utilization is only 7.57% but the cpu utilization of thread 3 is 71%, way higher then the cpu utilization of the other threads.
 
 === Performance 
 
+==== ASTF vs Linux NGINX
 see link:trex_astf_vs_nginx.html[ASTF Performance]
+
+==== GTPU Benchmark
+===== Setup details
+
+[cols="1,5"]
+|=================
+| Server:     | UCSC-C240-M4SX
+| CPU:        | 14 x Intel(R) Xeon(R) CPU E5-2667 v3 @ 3.20GHz
+| Ports count | 4 x 40Gbps @ Ethernet Controller XL710 for 40GbE QSFP+
+| RAM:        | 53397 MB
+| NICs:       | 2x i40e Silicom 40
+| OS:         | CentOS 7.4
+| TRex:       | v2.93 using 7 cores per dual interface.
+|=================
+
+===== Test details
+
+[cols="1,5"]
+|=================
+| duration           | 300 s
+| num of tunnels     | 10000
+| sport range        | 5000 - 15,000
+| num_of_clients     | 50000
+| source_ip range    | 172.16.1.1 - 172.16.40.17
+| dst_ip range       | 172.16.1.2 - 172.16.40.18
+| profile            | consist of 115 templates of UDP and TCP traffic.
+|=================
+ 
+===== The Test:
+
+* We Run TRex server: sudo ./t-rex-64 -i --astf -c 7 --software --tso-disable
+
+* In another shell we run the profile with and without GTPU with duration=300 s and sampled the stats.
+
+<<<
+
+===== Results
+
+*Gbps/cpu-util(%)* +
+
+This graph compares the gbps/cpu of the profile with GTPU and without
+
+image::images/gbps_cpu_1_profile.png[title="Gbps/CPU-Util",align="center",width={p_width}, link="images/gbps_cpu_1_profile.png"]
+
+We can see that the results of the profile without GTPU is better then the results with GTPU, even though the GTPU packets are bigger. +
+The reason for that is because the CPU utilization in the GTPU mode is also higher, we need to process more, like calculating the checksum for each packet and the overhead of generating the outer header.
+
+
+<<<
+
+The full results of the Gbps/CPU-util(%) graph: +
+
+
+.gbps/cpu with and without GTPU
+[options="header" , cols="^1,^2,^2"]
+|=================
+| Multiplier | With GTPU | Without GTPU
+|     3      |   0.620   |    0.774
+|     4      |   0.606   |    0.797
+|     5      |   0.594   |    0.741
+|     6      |   0.590   |    0.734
+|     7      |   0.572   |    0.719
+|     8      |   0.564   |    0.701
+|     9      |   0.564   |    0.686
+|     10     |   0.549   |    0.675
+|     11     |   0.546   |    0.659
+|     12     |   0.542   |    0.651
+|     13     |   0.535   |    0.641
+|     14     |   0.530   |    0.635
+|     15     |   0.528   |    0.624
+|=================
+
+<<<
+
+
+*CPU-Util (%)* +
+
+Here is a graph that Compares the CPU-Util (%) with GTPU and without GTPU.
+
+image::images/cpu-util_1_profile.png[title="CPU-Util",align="center",width={p_width}, link="images/cpu-util_1_profile.png"]
+
+As you can see the CPU-Util is higher when using the GTPU mode because of the extra work that TRex does when generating GTPU traffic, software checksum, encapsulation, decapsulation and etc.. +
+
+
+<<<
+
+The full results of the CPU-Util (%) graph +
+
+.CPU-Util (%) with and without GTPU
+[options="header" , cols="^1,^2,^2"]
+|=================
+| Multiplier | With GTPU | Without GTPU
+|     3      |   19.86   |    14.77
+|     4      |   27.40   |    20.54
+|     5      |   35.13   |    26.45
+|     6      |   42.92   |    32.41
+|     7      |   51.44   |    38.64
+|     8      |   58.22   |    44.90
+|     9      |   65.61   |    51.63
+|     10     |   70.47   |    58.50
+|     11     |   76.00   |    65.67
+|     12     |   80.82   |    71.35
+|     13     |   84.48   |    76.76
+|     14     |   88.10   |    81.78
+|     15     |   90.81   |    85.29
+|=================
+
+<<<
+
+*Gbps* +
+
+This graph compares the gbps with and without GTPU.
+
+image::images/gbps_1_profile.png[title="Gbps",align="center",width={p_width}, link="images/gbps_1_profile.png"]
+
+We can see that in small multiplier, with GTPU mode we are generating more traffic, because GTPU packets are bigger.
+But after certain point as the multiplier increases - the number of active flow grows and the overhead in the GTPU mode reduces the amount of traffic in compare to the regular mode.
+
+
+<<<
+
+The full results of the Gbps graph.
+
+.Gbps with and without GTPU
+[options="header" , cols="^1,^2,^2"]
+|=================
+| Multiplier | With GTPU | Without GTPU
+|     3      |    12.31  |    11.44
+|     4      |    16.60  |    16.37
+|     5      |    20.87  |    19.60
+|     6      |    25.31  |    23.79
+|     7      |    29.42  |    27.79
+|     8      |    32.81  |    31.46
+|     9      |    37.03  |    35.44
+|     10     |    38.67  |    39.46
+|     11     |    41.49  |    43.28
+|     12     |    43.81  |    46.44
+|     13     |    45.20  |    49.23
+|     14     |    46.71  |    51.96
+|     15     |    47.98  |    53.22
+|=================
 
 === Port service mode
 include::trex_port_service_mode.asciidoc[]
@@ -3182,7 +3633,25 @@ Yes. LRO improves the performance. GRO is not there yet.
 Curently the TCP/App layer counters are per client/server side. 
 We plan to add it in the interactive mode with RPC API. 
 
+==== GTPU FAQ
+===== I get drop even in low cpu utilization.
+In versions v2.92 and below TRex drop packets without GTPU header.
+So if the traffic includes packets without GTPU header TRex will drop them. +
+Another reason can be because of bad distribution - try add more tunnels,
+so the outer 5 tuple of the clients packets will be more diverse.
 
+===== When I am using more than 2 ports, there is no traffic on one or more ports.
+When using more than 2 ports. You need to make sure when you are using update_tunnel_client_record API, that you are updating the clients with all of the possible offset that TRex gives to the clients.
+
+===== I can't generate regular traffic after using the GTPU mode.
+You need to disable GTPU mode after you are done using it, because TRex doesn't generate Non GTPU packets in this mode.
+
+===== I can't activate/deactivate GTPU mode.
+In order to active/deactivate GTPU mode the server's state must be idle.
+
+
+===== When I am using GTPU mode there is no traffic after I start my profile.
+You need to update the GTPU info for each client using the *update_tunnel_client_record* API.
 
 === Appendix
 
